--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ]{1}[а-яё]{1,}-?([А-ЯЁ]{1}[а-яё]{1,})?" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="[a-z0-9~_\.-]+@[a-z0-9-]+\.[a-z]{2,}(\.[a-z]+)?" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="" minlength="" maxlength="18"  required/>
+                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="((\+7|8)\s?\([0-9]{3}\)\s?[0-9]{3}-?[0-9]{2}-?[0-9]{2}-?)|(\+7|8)\s?[0-9]{3}-?\s?[0-9]{3}-?[0-9]{2}-?[0-9]{2}-?" minlength="" maxlength="18"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="(https?:\/\/(w{3}\.)?[\wа-яё-]+(\.{1})[a-zа-яё]{2,}(:{1})?(\/{1})?(([a-z0-9-])?(\/{1})?){1,}#?)|(https?:\/\/(\d{1,3}\.{1}){3}\d{1,3}(:{1}[0-9]{2,5})?(\/{1})?(([a-z0-9-])?(\/{1})?){1,}#?)" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
